# SteamAPIRequests

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.cfg  tests.py
.github/workflows/: checks.yml  run-tests.yml  type-checks.yml
