[tool.poetry]
name = "testing-api-steam"
version = "0.1.0"
description = ""
authors = ["vadim-shalapugin <vadimsalapugin@gmail.com>"]
readme = "README.md"
packages = [{include = "testing_api_steam"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
flake8 = "^6.0.0"
mypy = "^0.991"
flake8-bugbear = "^23.1.14"
flake8-builtins = "^2.1.0"
pep8-naming = "^0.13.3"
flake8-commas = "^2.1.0"
flake8-variables-names = "^0.0.5"
flake8-import-order = "^0.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
